# BSU

./: .gitignore  README.md  Диаграмма без названия.drawio
Client/: Client.cpp
Lab5/: Header.h  Server.cpp
Lessons/Industrial Programming/Classes Tasks/JavaFX/: README.md
Lessons/Industrial Programming/Classes Tasks/Kontorl Work/KW 1/: README.md
Lessons/Industrial Programming/Classes Tasks/Kontorl Work/KW 2/: pom.xml
Lessons/Industrial Programming/Classes Tasks/LaboratorianTasks/Lab1/: CalculateTest.java  Main.java  README.md
Lessons/Industrial Programming/Classes Tasks/LaboratorianTasks/Lab2/: README.md
Lessons/Industrial Programming/Classes Tasks/LaboratorianTasks/Lab3/: Main.java  README.md  text.txt
Lessons/Industrial Programming/Classes Tasks/RegEx/: Input.txt  ReadME.md
Lessons/Industrial Programming/Colloquium/Fibonachi/: MyMath.java  TooSmallNumber.java
Lessons/Industrial Programming/Colloquium/Pattern/: ClothesFactoryTest.java
Lessons/Operating Systems/Kolloquium/: 0 questions group.txt
Lessons/Operating Systems/Kolloquium 22.11/: Main.cpp
Lessons/Operating Systems/Kolloquium 25.10/: 0 questions group.txt
Lessons/Operating Systems/Kolloquium 25.10 Variant 5/: 2 questions group.txt  3 questions group.txt
Lessons/Operating Systems/Kolloquium 25.10 Variant 5/1.1/: CMakeLists.txt  Header.h  MyTests.cpp
Lessons/Operating Systems/Kolloquium 25.10 Variant 5/1.2/: MyTest.cpp  main.cpp
Lessons/Operating Systems/Kolloquium 25.10 Variant 5/1.3/: CMakeLists.txt  Header.h  MyTest.cpp  main.cpp
Lessons/Operating Systems/Kolloquium 25.10/1.1/: main.cpp
Lessons/Operating Systems/Kolloquium 25.10/1.2/: CMakeLists.txt  Header.h
Lessons/Operating Systems/Lab 1/: Creator.cpp  Main.cpp  Reporter.cpp
Lessons/Operating Systems/Lab 2/: Main.cpp
Lessons/Operating Systems/Lab 3/: Main.cpp
Lessons/Operating Systems/Lab 4/: Sender.cpp
Lessons/Operating Systems/Lab 4/HardOption/: Reciever.cpp  Sender.cpp
Lessons/Operating Systems/Lab 4/SimpleOption/: Reciever.cpp
Lessons/Operating Systems/Lab 4/UpdatedHardOption/: Reciever.cpp  Sender.cpp
Lessons/Operating Systems/Lab 5/Lab5/: Header.h
app/release/: app-release.aab
app/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
(+60 files in other folders)
